--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -86,7 +86,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.TOKEN }}
 
       - name: Create manifest list and push
         working-directory: /tmp/digests
