--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastgpt-sdk/plugin",
-  "version": "0.2.12",
+  "version": "0.2.13",
   "description": "fastgpt-plugin sdk",
   "main": "dist/client.js",
   "types": "dist/client.d.ts",
@@ -12,6 +12,11 @@
     "fastgpt-tools",
     "sdk"
   ],
+  "dependencies": {
+    "@fortaine/fetch-event-source": "^3.0.6",
+    "@ts-rest/core": "3.52.1",
+    "zod": "^3.25.76"
+  },
   "author": "fastgpt",
   "license": "MIT",
   "devDependencies": {
