--- a/package.json
+++ b/package.json
@@ -19,29 +19,18 @@
     "prettier": "prettier --write \"./**/*.{ts,js,json}\""
   },
   "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "@eslint/json": "^0.11.0",
     "@inquirer/prompts": "^7.5.3",
-    "@types/bun": "latest",
-    "@types/cheerio": "^1.0.0",
-    "@types/markdown-it": "^14.1.2",
-    "@types/marked": "^6.0.0",
-    "@types/mssql": "^9.1.8",
-    "@types/mysql": "^2.15.27",
-    "@types/node": "^24.10.1",
-    "@types/nodemailer": "^7.0.4",
-    "@types/oracledb": "^6.10.0",
-    "@types/pg": "^8.15.6",
-    "@types/turndown": "^5.0.6",
-    "@types/xml2js": "^0.4.14",
-    "@vitest/coverage-v8": "3.1.2",
-    "bun-plugin-dts": "^0.3.0",
     "chalk": "^5.4.1",
     "date-fns": "^4.1.0",
+    "json5": "^2.2.3",
+    "@eslint/js": "^9.24.0",
+    "@eslint/json": "^0.11.0",
+    "@types/bun": "latest",
+    "@vitest/coverage-v8": "3.1.2",
+    "bun-plugin-dts": "^0.3.0",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
     "husky": "^8.0.3",
-    "json5": "^2.2.3",
     "lint-staged": "^13.3.0",
     "prettier": "3.2.4",
     "typescript-eslint": "^8.29.1",
@@ -66,31 +55,8 @@
     ]
   },
   "dependencies": {
-    "@clickhouse/client": "^1.13.0",
-    "@mendable/firecrawl-js": "^4.6.1",
-    "@perplexity-ai/perplexity_ai": "^0.16.0",
     "@ts-rest/core": "3.52.1",
     "@ts-rest/express": "3.52.1",
-    "@ts-rest/open-api": "3.52.1",
-    "cheerio": "^1.1.2",
-    "docx": "^9.5.1",
-    "duck-duck-scrape": "^2.2.7",
-    "echarts": "^6.0.0",
-    "exceljs": "^4.4.0",
-    "expr-eval": "^2.0.2",
-    "markdown-it": "^14.1.0",
-    "marked": "^17.0.0",
-    "mssql": "^12.1.0",
-    "mysql2": "^3.15.3",
-    "node-fetch": "^3.3.2",
-    "nodemailer": "^7.0.10",
-    "oracledb": "^6.10.0",
-    "pg": "^8.16.3",
-    "postgres": "^3.4.7",
-    "pptxgenjs": "^4.0.1",
-    "turndown": "^7.2.2",
-    "wikijs": "^6.4.1",
-    "xml2js": "^0.6.2",
-    "youtube-caption-extractor": "^1.9.1"
+    "@ts-rest/open-api": "3.52.1"
   }
 }
