--- a/runtime/.env.template
+++ b/runtime/.env.template
@@ -39,3 +39,4 @@ SERVICE_REQUEST_MAX_CONTENT_LENGTH=10
 # 最大 API 请求体大小
 MAX_API_SIZE=10
 DISABLE_DEV_TOOLS=false # 禁用 Dev 插件载入
+FASTGPT_BASE_URL=http://localhost:3000
