perf: worker in tool

--- a/.env.marketplace.template
+++ b/.env.marketplace.template
@@ -6,7 +6,7 @@ MARKETPLACE_BASE_URL=http://localhost:3100
 MARKETPLACE_AUTH_TOKEN=token
 
 # 对象存储
-STORAGE_VENDOR=minio # 如果是 Sealos 的对象存储填 aws-s3
+STORAGE_VENDOR=minio 
 STORAGE_REGION=us-east-1
 STORAGE_ACCESS_KEY_ID=minioadmin
 STORAGE_SECRET_ACCESS_KEY=minioadmin
