--- a/runtime/.env.template
+++ b/runtime/.env.template
@@ -21,10 +21,11 @@ REDIS_URL=redis://default:mypassword@127.0.0.1:6379
 SERVICE_REQUEST_MAX_CONTENT_LENGTH=10
 # 最大 API 请求体大小
 MAX_API_SIZE=10
-DISABLE_DEV_TOOLS=false # 禁用 Dev 插件载入
+# 禁用 Dev 插件载入
+DISABLE_DEV_TOOLS=false 
 
 # 对象存储
-STORAGE_VENDOR=minio # 如果是 Sealos 的对象存储填 aws-s3
+STORAGE_VENDOR=minio
 STORAGE_REGION=us-east-1
 STORAGE_ACCESS_KEY_ID=minioadmin
 STORAGE_SECRET_ACCESS_KEY=minioadmin
