--- a/runtime/tsconfig.json
+++ b/runtime/tsconfig.json
@@ -31,6 +31,7 @@
       "@tool/*": ["../modules/tool/*"],
       "@model/*": ["../modules/model/*"],
       "@workflow/*": ["../modules/workflow/*"],
+      "@dataset/*": ["../modules/dataset/*"],
       "@runtime/*": ["./src/*"]
     },
 
