--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
       "@/*": ["lib/*"],
       "@tool/*": ["modules/tool/*"],
       "@model/*": ["modules/model/*"],
-      "@workflow/*": ["modules/workflow/*"]
+      "@workflow/*": ["modules/workflow/*"],
+      "@dataset/*": ["modules/dataset/*"]
     },
 
     // Performance optimizations
