--- a/package.json
+++ b/package.json
@@ -55,13 +55,14 @@
     ]
   },
   "dependencies": {
-    "@fastgpt-sdk/storage": "^0.6.6",
+    "@fastgpt-sdk/storage": "^0.6.14",
     "@ts-rest/core": "3.52.1",
     "@ts-rest/express": "3.52.1",
     "@ts-rest/open-api": "3.52.1",
     "@types/cheerio": "^0.22.35",
     "@types/marked": "^5.0.2",
     "cheerio": "^1.1.0",
+    "fastgpt-plugins": ".",
     "marked": "^17.0.1",
     "proxy-agent": "^6.5.0"
   }
