chore: add extra sub path for custom S3

--- a/runtime/.env.template
+++ b/runtime/.env.template
@@ -22,7 +22,7 @@ SERVICE_REQUEST_MAX_CONTENT_LENGTH=10
 # 最大 API 请求体大小
 MAX_API_SIZE=10
 # 禁用 Dev 插件载入
-DISABLE_DEV_TOOLS=false 
+DISABLE_DEV_TOOLS=false
 
 # 对象存储
 STORAGE_VENDOR=minio
@@ -35,5 +35,7 @@ STORAGE_EXTERNAL_ENDPOINT=
 STORAGE_S3_ENDPOINT=http://127.0.0.1:9000
 STORAGE_S3_FORCE_PATH_STYLE=true
 STORAGE_S3_MAX_RETRIES=3
+STORAGE_PUBLIC_ACCESS_EXTRA_SUB_PATH=
+
 # reverse invoking
 FASTGPT_BASE_URL=http://localhost:3000
