--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@fastgpt-sdk/plugin",
-  "version": "0.3.6",
+  "version": "0.3.8",
   "description": "fastgpt-plugin sdk",
   "main": "dist/client.js",
   "types": "dist/client.d.ts",
   "scripts": {
-    "build": "bun run build.ts"
+    "build": "tsdown"
   },
   "keywords": [
     "fastgpt",
@@ -19,6 +19,6 @@
   "author": "fastgpt",
   "license": "MIT",
   "devDependencies": {
-    "bun-plugin-dts": "^0.3.0"
+    "tsdown": "^0.20.1"
   }
 }
