--- a/packages/helpers/tsconfig.json
+++ b/packages/helpers/tsconfig.json
@@ -3,13 +3,10 @@
     "module": "esnext",
     "target": "es2022",
     "moduleResolution": "bundler",
-
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
     "strict": true,
+    "jsx": "react-jsx",
     "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
@@ -18,7 +15,7 @@
 
     "baseUrl": "./",
     "paths": {
-      "@fastgpt-plugin/cli/*": ["src/*"]
+      "@fastgpt-plugin/helpers/*": ["src/*"]
     }
   }
 }
