--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,9 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun run scripts/dev/index.ts",
-    "build": "bun run build/index.ts",
-    "build:worker": "bun build --env=disable --outfile=../dist/worker.js --target=node --minify ./src/workers/toolRunner.ts",
-    "build:main": "bun build --env=disable --outfile=../dist/index.js --target=node --minify index.ts"
+    "build": "tsdown"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -31,8 +29,10 @@
     "glob": "^13.0.1",
     "hono": "^4.11.5",
     "ioredis": "^5.9.2",
-    "mongoose": "^9.1.5",
+    "joplin-turndown-plugin-gfm": "^1.0.12",
+    "mongoose": "8",
     "nanoid": "^5.1.6",
+    "tinypool": "^2.1.0",
     "turndown": "^7.2.2",
     "undici": "^7.20.0",
     "zod": "^4"
