--- a/packages/helpers/tsconfig.json
+++ b/packages/helpers/tsconfig.json
@@ -12,6 +12,7 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
+    "noEmit": true,
 
     "baseUrl": "./",
     "paths": {
