--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fastgpt/plugin-runtime",
+  "name": "@fastgpt-plugin/server",
   "module": "index.ts",
   "type": "module",
   "scripts": {
