--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "@fortaine/fetch-event-source": "^3.0.6",
+    "@fastgpt-plugin/helpers": "workspace:*",
     "zod": "^4"
   },
   "author": "fastgpt",
