--- a/packages/cli/templates/tool-suite/tsconfig.json
+++ b/packages/cli/templates/tool-suite/tsconfig.json
@@ -12,6 +12,8 @@
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "noEmit": true
+  },
+  "exclude": ["**/*.test.ts", "**/*.spec.ts", "**/*.test.tsx", "**/*.spec.tsx"]
 }
