--- a/runtime/.env.template
+++ b/runtime/.env.template
@@ -26,8 +26,12 @@ SYNC_INDEX=true
 REDIS_URL=redis://default:password@localhost:6379/0
 
 # ================ 日志 =====================
+# 打印的日志等级: "trace" | "debug" | "info" | "warning" | "error" | "fatal"
+LOG_LEVEL=info
 LOG_ENABLE_CONSOLE=true
 LOG_ENABLE_OTEL=false
+# OTEL 存储的最低日志等级 (默认与 LOG_LEVEL 相同)
+LOG_OTEL_LEVEL=info
 LOG_OTEL_SERVICE_NAME=fastgpt-plugin
 LOG_OTEL_URL=http://localhost:4318/v1/logs
 
